--- a/style.css
+++ b/style.css
@@ -33,9 +33,9 @@ body {
     max-width: 600px; 
     max-height: 400px;
     border-radius: 25px;
-    box-shadow: 0px 15px 20px 9px rgba(0,0,0,0.16);
-    -webkit-box-shadow: 0px 15px 20px 9px rgba(0,0,0,0.16);
-    -moz-box-shadow: 0px 15px 20px 9px rgba(0,0,0,0.16);
+    box-shadow: 0px 10px 22px 5px rgba(0,0,0,0.1);
+    -webkit-box-shadow: 0px 10px 22px 5px rgba(0,0,0,0.1);
+    -moz-box-shadow: 0px 10px 22px 5px rgba(0,0,0,0.1);
 }
 
 .card-left {
@@ -69,11 +69,7 @@ body {
 .city {
     margin-top: 3rem;
     font-family: "Libre Caslon Text", serif;
-    font-size: 2.5rem;
-}
-
-.search-box {
-    width: 100%;
+    font-size: 2.25rem;
 }
 
 .city-search__input {
@@ -86,12 +82,12 @@ body {
 
 .search__button {
     height: 100%;
-    width: 40px;
     border-radius: 50%;
     border: 0;
     background-color: var(--bg-color);
     margin-left: .9rem;
     cursor: pointer;
+    padding: 0 .85rem;
 }
 
 .search__button img {
